--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "i18next": "^22.4.9",
+    "i18next-http-backend": "^2.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-github-calendar": "^3.2.2",
+    "react-i18next": "^12.1.5",
     "react-icons": "^4.7.1",
     "react-parallax-tilt": "^1.7.42",
     "react-pdf": "^5.7.1",
