--- a/package.json
+++ b/package.json
@@ -3,40 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-pdf/renderer": "^2.2.0",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
-    "bootstrap": "^5.1.3",
-    "i18next": "^22.4.9",
-    "i18next-http-backend": "^2.1.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.2.1",
-    "react-dom": "^17.0.2",
-    "react-github-calendar": "^3.2.2",
-    "react-i18next": "^12.1.5",
-    "react-icons": "^4.7.1",
-    "react-parallax-tilt": "^1.7.42",
-    "react-pdf": "^5.7.1",
-    "react-router-dom": "^6.2.2",
+    "@react-pdf/renderer": "2.2.0",
+    "@testing-library/jest-dom": "5.16.2",
+    "@testing-library/react": "12.1.4",
+    "@testing-library/user-event": "13.5.0",
+    "axios": "0.26.1",
+    "bootstrap": "5.1.3",
+    "i18next": "22.4.9",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.2",
+    "react": "17.0.2",
+    "react-bootstrap": "2.2.1",
+    "react-dom": "17.0.2",
+    "react-github-calendar": "3.2.2",
+    "react-i18next": "12.1.5",
+    "react-icons": "4.7.1",
+    "react-parallax-tilt": "1.7.42",
+    "react-pdf": "5.7.1",
+    "react-router-dom": "6.2.2",
     "react-scripts": "5.0.0",
-    "react-snowfall": "^1.2.1",
-    "react-tsparticles": "^1.42.2",
-    "typewriter-effect": "^2.18.2",
-    "web-vitals": "^2.1.4",
-    "workbox-background-sync": "^6.5.4",
-    "workbox-broadcast-update": "^6.5.4",
-    "workbox-cacheable-response": "^6.5.4",
-    "workbox-core": "^6.5.4",
-    "workbox-expiration": "^6.5.4",
-    "workbox-google-analytics": "^6.5.4",
-    "workbox-navigation-preload": "^6.5.4",
-    "workbox-precaching": "^6.5.4",
-    "workbox-range-requests": "^6.5.4",
-    "workbox-routing": "^6.5.4",
-    "workbox-strategies": "^6.5.4",
-    "workbox-streams": "^6.5.4"
+    "react-snowfall": "1.2.1",
+    "react-tsparticles": "1.42.2",
+    "typewriter-effect": "2.18.2",
+    "web-vitals": "2.1.4",
+    "workbox-background-sync": "6.5.4",
+    "workbox-broadcast-update": "6.5.4",
+    "workbox-cacheable-response": "6.5.4",
+    "workbox-core": "6.5.4",
+    "workbox-expiration": "6.5.4",
+    "workbox-google-analytics": "6.5.4",
+    "workbox-navigation-preload": "6.5.4",
+    "workbox-precaching": "6.5.4",
+    "workbox-range-requests": "6.5.4",
+    "workbox-routing": "6.5.4",
+    "workbox-strategies": "6.5.4",
+    "workbox-streams": "6.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
