--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "axios": "0.26.1",
     "bootstrap": "5.1.3",
     "i18next": "22.4.9",
-    "i18next-browser-languagedetector": "^7.1.0",
-    "i18next-http-backend": "^2.2.2",
+    "i18next-browser-languagedetector": "7.1.0",
+    "i18next-http-backend": "2.2.2",
     "react": "17.0.2",
     "react-bootstrap": "2.2.1",
     "react-dom": "17.0.2",
