--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "2.8.0",
     "react-dev-utils": "^12.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "17.0.2",
     "react-github-calendar": "3.2.2",
     "react-i18next": "12.1.5",
