--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "2.8.0",
     "react-dev-utils": "^12.0.0",
-    "react-device-detect": "^2.2.3",
     "react-dom": "17.0.2",
     "react-github-calendar": "3.2.2",
     "react-i18next": "12.1.5",
@@ -56,6 +55,7 @@
     "react-parallax-tilt": "1.7.42",
     "react-pdf": "5.7.1",
     "react-refresh": "^0.11.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "6.2.2",
     "react-snowfall": "1.2.1",
     "react-tsparticles": "1.42.2",
