--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
     "react-github-calendar": "3.2.2",
     "react-i18next": "12.1.5",
     "react-icons": "4.7.1",
+    "react-intersection-observer": "^9.5.2",
     "react-parallax-tilt": "1.7.42",
     "react-pdf": "5.7.1",
     "react-refresh": "^0.11.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "6.2.2",
     "react-snowfall": "1.2.1",
+    "react-spring": "^9.7.2",
     "react-tsparticles": "1.42.2",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
