--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "i18n-ally.localesPaths": [
-        "public/locales"
-    ]
-}
+      "./public/locales"
+    ],
+    "i18n-ally.keystyle": "nested",
+  }
